tests/snapshots/snapshots__budget_react_hot_toast_level4.snap
---
source: tests/snapshots.rs
expression: output
---
budget: 700 → level 7 (688 words)

components/checkmark.tsx
     3→const circleAnimation = keyframes`
    13→const checkmarkAnimation = keyframes`
    29→export interface CheckmarkTheme {
    34→export const CheckmarkIcon = styled('div')<CheckmarkTheme>`
components/error.tsx
     3→const circleAnimation = keyframes`
    13→const firstLineAnimation = keyframes`
    23→const secondLineAnimation = keyframes`
    33→export interface ErrorTheme {
    38→export const ErrorIcon = styled('div')<ErrorTheme>`
components/loader.tsx
     3→const rotate = keyframes`
    12→export interface LoaderTheme {
    17→export const LoaderIcon = styled('div')<LoaderTheme>`
components/toast-bar.tsx
     8→const enterAnimation = (factor: number) => `
     9→0% {transform: translate3d(0,${factor * -200}%,0) scale(.6); opacity:.5;}
    10→100% {transform: translate3d(0,0,0) scale(1); opacity:1;}
    11→`;
    13→const exitAnimation = (factor: number) => `
    14→0% {transform: translate3d(0,0,-1px) scale(1); opacity:1;}
    15→100% {transform: translate3d(0,${factor * -150}%,-1px) scale(.6); opacity:0;}
    16→`;
    18→const fadeInAnimation = `0%{opacity:0;} 100%{opacity:1;}`;
    19→const fadeOutAnimation = `0%{opacity:1;} 100%{opacity:0;}`;
    22→const ToastBarBase = styled('div')`
    38→const Message = styled('div')`
    47→interface ToastBarProps {
    57→const getAnimationStyle = (
    58→  position: ToastPosition,
    59→  visible: boolean
    60→): React.CSSProperties => {
    75→export const ToastBar: React.FC<ToastBarProps> = React.memo(
components/toast-icon.tsx
     9→const StatusWrapper = styled('div')`
    13→const IndicatorWrapper = styled('div')`
    22→const enter = keyframes`
    32→export const AnimatedIconWrapper = styled('div')`
    41→export type IconThemes = Partial<{
    42→  success: CheckmarkTheme;
    43→  error: ErrorTheme;
    44→  loading: LoaderTheme;
    45→}>;
    47→export const ToastIcon: React.FC<{
components/toaster.tsx
    15→const ToastWrapper = ({
    47→const getPositionStyle = (
    48→  position: ToastPosition,
    49→  offset: number
    50→): React.CSSProperties => {
    76→const activeClass = css`
    83→const DEFAULT_OFFSET = 16;
    85→export const Toaster: React.FC<ToasterProps> = ({
core/store.ts
     4→export const TOAST_EXPIRE_DISMISS_DELAY = 1000;
     5→export const TOAST_LIMIT = 20;
     6→export const DEFAULT_TOASTER_ID = 'default';
     8→interface ToasterSettings {
    12→export enum ActionType {
    22→export type Action =
    23→  | {
    24→      type: ActionType.ADD_TOAST;
    25→      toast: Toast;
    26→    }
    27→  | {
    28→      type: ActionType.UPSERT_TOAST;
    29→      toast: Toast;
    30→    }
    31→  | {
    32→      type: ActionType.UPDATE_TOAST;
    33→      toast: Partial<Toast>;
    34→    }
    35→  | {
    36→      type: ActionType.DISMISS_TOAST;
    37→      toastId?: string;
    38→    }
    39→  | {
    40→      type: ActionType.REMOVE_TOAST;
    41→      toastId?: string;
    42→    }
    43→  | {
    44→      type: ActionType.START_PAUSE;
    45→      time: number;
    46→    }
    47→  | {
    48→      type: ActionType.END_PAUSE;
    49→      time: number;
    50→    };
    52→interface ToasterState {
    58→interface State {
    62→export const reducer = (state: ToasterState, action: Action): ToasterState => {
   136→const listeners: Array<
   140→const defaultToasterState: ToasterState = {
   149→export const dispatch = (action: Action, toasterId = DEFAULT_TOASTER_ID) => {
   161→export const dispatchAll = (action: Action) =>
   162→  Object.keys(memoryState).forEach((toasterId) => dispatch(action, toasterId));
   164→export const getToasterIdFromToastId = (toastId: string) =>
   165→  Object.keys(memoryState).find((toasterId) =>
   166→    memoryState[toasterId].toasts.some((t) => t.id === toastId)
   167→  );
   169→export const createDispatch =
   170→  (toasterId = DEFAULT_TOASTER_ID) =>
   171→  (action: Action) => {
   175→export const defaultTimeouts: {
   185→export const useStore = (
   186→  toastOptions: DefaultToastOptions = {},
   187→  toasterId: string = DEFAULT_TOASTER_ID
   188→): ToasterState => {
core/toast.ts
    19→type Message = ValueOrFunction<Renderable, Toast>;
    21→type ToastHandler = (message: Message, options?: ToastOptions) => string;
    23→const createToast = (
    24→  message: Message,
    25→  type: ToastType = 'blank',
    26→  opts?: ToastOptions
    27→): Toast => ({
    42→const createHandler =
    43→  (type?: ToastType): ToastHandler =>
    44→  (message, options) => {
    55→const toast = (message: Message, opts?: ToastOptions) =>
    56→  createHandler('blank')(message, opts);
core/types.ts
     3→export type ToastType = 'success' | 'error' | 'loading' | 'blank' | 'custom';
     4→export type ToastPosition =
     5→  | 'top-left'
     6→  | 'top-center'
     7→  | 'top-right'
     8→  | 'bottom-left'
     9→  | 'bottom-center'
    10→  | 'bottom-right';
    12→export type Renderable = React.ReactElement | string | null;
    14→export interface IconTheme {
    19→export type ValueFunction<TValue, TArg> = (arg: TArg) => TValue;
    20→export type ValueOrFunction<TValue, TArg> =
    21→  | TValue
    22→  | ValueFunction<TValue, TArg>;
    24→const isFunction = <TValue, TArg>(
    25→  valOrFunction: ValueOrFunction<TValue, TArg>
    26→): valOrFunction is ValueFunction<TValue, TArg> =>
    27→  typeof valOrFunction === 'function';
    29→export const resolveValue = <TValue, TArg>(
    30→  valOrFunction: ValueOrFunction<TValue, TArg>,
    31→  arg: TArg
    32→): TValue => (isFunction(valOrFunction) ? valOrFunction(arg) : valOrFunction);
    34→export interface Toast {
    60→export type ToastOptions = Partial<
    61→  Pick<
    62→    Toast,
    63→    | 'id'
    64→    | 'icon'
    65→    | 'duration'
    66→    | 'ariaProps'
    67→    | 'className'
    68→    | 'style'
    69→    | 'position'
    70→    | 'iconTheme'
    71→    | 'toasterId'
    72→    | 'removeDelay'
    73→  >
    74→>;
    76→export type DefaultToastOptions = ToastOptions & {
    77→  [key in ToastType]?: ToastOptions;
    78→};
    80→export interface ToasterProps {
    91→export interface ToastWrapperProps {
core/use-toaster.ts
     6→export const REMOVE_DELAY = 1000;
     8→export const useToaster = (
     9→  toastOptions?: DefaultToastOptions,
    10→  toasterId: string = 'default'
    11→) => {
core/utils.ts
     1→export const genId = (() => {
     8→export const prefersReducedMotion = (() => {
headless/index.ts
index.ts
