tests/snapshots/snapshots__budget_react_hot_toast_root_level0.snap
---
source: tests/snapshots.rs
expression: output
---
budget: 50 → level 0 (32 words)

README.md
jest.config.js
site/README.md
site/components/code.tsx
site/components/docs-layout.tsx
site/components/emoji-button.tsx
site/components/sections/footer.tsx
site/components/sections/splitbee-counter.tsx
site/components/sections/toast-example.tsx
site/components/sections/toaster-example.tsx
site/next-env.d.ts
site/next.config.mjs
site/pages/_app.tsx
site/pages/index.tsx
site/postcss.config.js
site/tailwind.config.js
site/types/mdx.d.ts
site/types/svg.d.ts
src/components/checkmark.tsx
src/components/error.tsx
src/components/loader.tsx
src/components/toast-bar.tsx
src/components/toast-icon.tsx
src/components/toaster.tsx
src/core/store.ts
src/core/toast.ts
src/core/types.ts
src/core/use-toaster.ts
src/core/utils.ts
src/headless/index.ts
src/index.ts
tsup.config.ts
