tests/snapshots/snapshots__budget_react_hot_toast_root_level1.snap
---
source: tests/snapshots.rs
expression: output
---
budget: 200 → level 1 (68 words)

README.md
    28→## Features
    37→## Installation
    39→#### With pnpm
    45→#### With NPM
    51→## Getting Started
    70→## Documentation
jest.config.js
site/README.md
     3→## Getting Started
    17→## Learn More
    26→## Deploy on Vercel
site/components/code.tsx
site/components/docs-layout.tsx
site/components/emoji-button.tsx
site/components/sections/footer.tsx
site/components/sections/splitbee-counter.tsx
site/components/sections/toast-example.tsx
site/components/sections/toaster-example.tsx
site/next-env.d.ts
site/next.config.mjs
     5→const withMDX
    15→const nextConfig
    17→  webpack
    24→  async rewrites
site/pages/_app.tsx
site/pages/index.tsx
site/postcss.config.js
site/tailwind.config.js
site/types/mdx.d.ts
site/types/svg.d.ts
src/components/checkmark.tsx
src/components/error.tsx
src/components/loader.tsx
src/components/toast-bar.tsx
src/components/toast-icon.tsx
src/components/toaster.tsx
src/core/store.ts
src/core/toast.ts
src/core/types.ts
src/core/use-toaster.ts
src/core/utils.ts
src/headless/index.ts
src/index.ts
tsup.config.ts
     4→const commonConfig
