tests/snapshots/snapshots__budget_react_hot_toast_root_level2.snap
---
source: tests/snapshots.rs
expression: output
---
budget: 1000 → level 4 (684 words)

README.md
    28→## Features
    37→## Installation
    39→#### With pnpm
    45→#### With NPM
    51→## Getting Started
    70→## Documentation
jest.config.js
site/README.md
     3→## Getting Started
    17→## Learn More
    26→## Deploy on Vercel
site/components/code.tsx
     8→const theme
   104→export const Code: React.FC<{
site/components/docs-layout.tsx
     8→const TableItem
    19→const TableHeader
    27→export default function DocsLayout({ meta, children }) {
site/components/emoji-button.tsx
     1→export const EmojiButton: React.FC<{
site/components/sections/footer.tsx
     4→export function Footer({ noBadge }: { noBadge?: boolean }) {
site/components/sections/splitbee-counter.tsx
     4→export const useSplitbeeCount = <T extends string>(
     5→  event: T,
     6→  token: string
     7→): number => {
    36→export const SplitbeeCounter = () => {
site/components/sections/toast-example.tsx
     7→const examples
   270→export const ToastExample = () => {
site/components/sections/toaster-example.tsx
     8→export const positions: Array<ToastPosition> = [
    17→export const ToasterExample: React.FC<{
site/next-env.d.ts
site/next.config.mjs
     5→const withMDX = nextMdx({
    15→const nextConfig = {
    17→  webpack(config) {
    24→  async rewrites() {
site/pages/_app.tsx
    12→const components
    71→function MyApp
site/pages/index.tsx
    22→const version
    24→const Feature
    31→const Step
    49→const Steps
    88→const Features
   102→export default function Home() {
site/postcss.config.js
site/tailwind.config.js
site/types/mdx.d.ts
site/types/svg.d.ts
     1→interface SvgrComponent
     5→  const value
src/components/checkmark.tsx
     3→const circleAnimation
    13→const checkmarkAnimation
    29→export interface CheckmarkTheme {
    34→export const CheckmarkIcon = styled('div')<CheckmarkTheme>`
src/components/error.tsx
     3→const circleAnimation
    13→const firstLineAnimation
    23→const secondLineAnimation
    33→export interface ErrorTheme {
    38→export const ErrorIcon = styled('div')<ErrorTheme>`
src/components/loader.tsx
     3→const rotate
    12→export interface LoaderTheme {
    17→export const LoaderIcon = styled('div')<LoaderTheme>`
src/components/toast-bar.tsx
     8→const enterAnimation
    13→const exitAnimation
    18→const fadeInAnimation
    19→const fadeOutAnimation
    22→const ToastBarBase
    38→const Message
    47→interface ToastBarProps
    57→const getAnimationStyle
    75→export const ToastBar: React.FC<ToastBarProps> = React.memo(
src/components/toast-icon.tsx
     9→const StatusWrapper
    13→const IndicatorWrapper
    22→const enter
    32→export const AnimatedIconWrapper = styled('div')`
    41→export type IconThemes = Partial<{
    42→  success: CheckmarkTheme;
    43→  error: ErrorTheme;
    44→  loading: LoaderTheme;
    45→}>;
    47→export const ToastIcon: React.FC<{
src/components/toaster.tsx
    15→const ToastWrapper
    47→const getPositionStyle
    76→const activeClass
    83→const DEFAULT_OFFSET
    85→export const Toaster: React.FC<ToasterProps> = ({
src/core/store.ts
     4→export const TOAST_EXPIRE_DISMISS_DELAY = 1000;
     5→export const TOAST_LIMIT = 20;
     6→export const DEFAULT_TOASTER_ID = 'default';
     8→interface ToasterSettings
    12→export enum ActionType {
    22→export type Action =
    23→  | {
    24→      type: ActionType.ADD_TOAST;
    25→      toast: Toast;
    26→    }
    27→  | {
    28→      type: ActionType.UPSERT_TOAST;
    29→      toast: Toast;
    30→    }
    31→  | {
    32→      type: ActionType.UPDATE_TOAST;
    33→      toast: Partial<Toast>;
    34→    }
    35→  | {
    36→      type: ActionType.DISMISS_TOAST;
    37→      toastId?: string;
    38→    }
    39→  | {
    40→      type: ActionType.REMOVE_TOAST;
    41→      toastId?: string;
    42→    }
    43→  | {
    44→      type: ActionType.START_PAUSE;
    45→      time: number;
    46→    }
    47→  | {
    48→      type: ActionType.END_PAUSE;
    49→      time: number;
    50→    };
    52→interface ToasterState
    58→interface State
    62→export const reducer = (state: ToasterState, action: Action): ToasterState => {
   136→const listeners
   140→const defaultToasterState
   149→export const dispatch = (action: Action, toasterId = DEFAULT_TOASTER_ID) => {
   161→export const dispatchAll = (action: Action) =>
   162→  Object.keys(memoryState).forEach((toasterId) => dispatch(action, toasterId));
   164→export const getToasterIdFromToastId = (toastId: string) =>
   165→  Object.keys(memoryState).find((toasterId) =>
   166→    memoryState[toasterId].toasts.some((t) => t.id === toastId)
   167→  );
   169→export const createDispatch =
   170→  (toasterId = DEFAULT_TOASTER_ID) =>
   171→  (action: Action) => {
   175→export const defaultTimeouts: {
   185→export const useStore = (
   186→  toastOptions: DefaultToastOptions = {},
   187→  toasterId: string = DEFAULT_TOASTER_ID
   188→): ToasterState => {
src/core/toast.ts
    19→type Message
    21→type ToastHandler
    23→const createToast
    42→const createHandler
    55→const toast
src/core/types.ts
     3→export type ToastType = 'success' | 'error' | 'loading' | 'blank' | 'custom';
     4→export type ToastPosition =
     5→  | 'top-left'
     6→  | 'top-center'
     7→  | 'top-right'
     8→  | 'bottom-left'
     9→  | 'bottom-center'
    10→  | 'bottom-right';
    12→export type Renderable = React.ReactElement | string | null;
    14→export interface IconTheme {
    19→export type ValueFunction<TValue, TArg> = (arg: TArg) => TValue;
    20→export type ValueOrFunction<TValue, TArg> =
    21→  | TValue
    22→  | ValueFunction<TValue, TArg>;
    24→const isFunction
    29→export const resolveValue = <TValue, TArg>(
    30→  valOrFunction: ValueOrFunction<TValue, TArg>,
    31→  arg: TArg
    32→): TValue => (isFunction(valOrFunction) ? valOrFunction(arg) : valOrFunction);
    34→export interface Toast {
    60→export type ToastOptions = Partial<
    61→  Pick<
    62→    Toast,
    63→    | 'id'
    64→    | 'icon'
    65→    | 'duration'
    66→    | 'ariaProps'
    67→    | 'className'
    68→    | 'style'
    69→    | 'position'
    70→    | 'iconTheme'
    71→    | 'toasterId'
    72→    | 'removeDelay'
    73→  >
    74→>;
    76→export type DefaultToastOptions = ToastOptions & {
    77→  [key in ToastType]?: ToastOptions;
    78→};
    80→export interface ToasterProps {
    91→export interface ToastWrapperProps {
src/core/use-toaster.ts
     6→export const REMOVE_DELAY = 1000;
     8→export const useToaster = (
     9→  toastOptions?: DefaultToastOptions,
    10→  toasterId: string = 'default'
    11→) => {
src/core/utils.ts
     1→export const genId = (() => {
     8→export const prefersReducedMotion = (() => {
src/headless/index.ts
src/index.ts
tsup.config.ts
     4→const commonConfig: Options = {
