tests/snapshots/snapshots__budget_react_hot_toast_root_level5.snap
---
source: tests/snapshots.rs
expression: output
---
budget: 2000 → level 7 (1388 words)

README.md
    28→## Features
    29→
    30→- 🔥 **Hot by default**
    31→- 🔩 **Easily Customizable**
    32→- ⏳ **Promise API** - _Automatic loader from a promise_
    33→- 🕊 **Lightweight** - _less than 5kb including styles_
    34→- ✅ **Accessible**
    35→- 🤯 **Headless Hooks** - _Create your own with [`useToaster()`](https://react-hot-toast.com/docs/use-toaster)_
    36→
    37→## Installation
    38→
    39→#### With pnpm
    40→
    41→```sh
    42→pnpm add react-hot-toast
    43→```
    44→
    45→#### With NPM
    46→
    47→```sh
    48→npm install react-hot-toast
    49→```
    50→
    51→## Getting Started
    52→
    53→Add the Toaster to your app first. It will take care of rendering all notifications emitted. Now you can trigger `toast()` from anywhere!
    54→
    55→```jsx
    56→import toast, { Toaster } from 'react-hot-toast';
    57→
    58→const notify = () => toast('Here is your toast.');
    59→
    60→const App = () => {
    61→  return (
    62→    <div>
    63→      <button onClick={notify}>Make me a toast</button>
    64→      <Toaster />
    65→    </div>
    66→  );
    67→};
    68→```
    69→
    70→## Documentation
    71→
    72→Find the full API reference on [official documentation](https://react-hot-toast.com/docs).
jest.config.js
site/README.md
     3→## Getting Started
     4→
     5→First, run the development server:
     6→
     7→```bash
     8→npm run dev
     9→# or
    10→yarn dev
    11→```
    12→
    13→Open [http://localhost:3000](http://localhost:3000) with your browser to see the result.
    14→
    15→You can start editing the page by modifying `pages/index.js`. The page auto-updates as you edit the file.
    16→
    17→## Learn More
    18→
    19→To learn more about Next.js, take a look at the following resources:
    20→
    21→- [Next.js Documentation](https://nextjs.org/docs) - learn about Next.js features and API.
    22→- [Learn Next.js](https://nextjs.org/learn) - an interactive Next.js tutorial.
    23→
    24→You can check out [the Next.js GitHub repository](https://github.com/vercel/next.js/) - your feedback and contributions are welcome!
    25→
    26→## Deploy on Vercel
    27→
    28→The easiest way to deploy your Next.js app is to use the [Vercel Platform](https://vercel.com/import?utm_medium=default-template&filter=next.js&utm_source=create-next-app&utm_campaign=create-next-app-readme) from the creators of Next.js.
    29→
    30→Check out our [Next.js deployment documentation](https://nextjs.org/docs/deployment) for more details.
site/components/code.tsx
     8→const theme: PrismTheme = {
   104→export const Code: React.FC<{
site/components/docs-layout.tsx
     8→const TableItem: React.FC<{
    19→const TableHeader: React.FC<{
    27→export default function DocsLayout({ meta, children }) {
site/components/emoji-button.tsx
     1→export const EmojiButton: React.FC<{
site/components/sections/footer.tsx
     4→export function Footer({ noBadge }: { noBadge?: boolean }) {
site/components/sections/splitbee-counter.tsx
     4→export const useSplitbeeCount = <T extends string>(
     5→  event: T,
     6→  token: string
     7→): number => {
    36→export const SplitbeeCounter = () => {
site/components/sections/toast-example.tsx
     7→const examples: Array<{
   270→export const ToastExample = () => {
site/components/sections/toaster-example.tsx
     8→export const positions: Array<ToastPosition> = [
    17→export const ToasterExample: React.FC<{
site/next-env.d.ts
site/next.config.mjs
     5→const withMDX = nextMdx({
    14→/** @type {import('next').NextConfig} */
    15→const nextConfig = {
    17→  webpack(config) {
    24→  async rewrites() {
site/pages/_app.tsx
    12→const components = {
    71→function MyApp({ Component, pageProps }) {
site/pages/index.tsx
    22→const version = packageInfo.version;
    24→const Feature: React.FC<{ children?: React.ReactNode }> = ({ children }) => (
    25→  <div className="flex gap-1 items-center">
    26→    <Checkmark />
    27→    <span className="font-bold">{children}</span>
    28→  </div>
    29→);
    31→const Step: React.FC<{
    49→const Steps = () => (
    50→  <div className="grid  grid-cols-1 md:grid-cols-3 gap-x-4 gap-y-8 my-12">
    51→    <Step
    52→      count={1}
    53→      title="Install package"
    54→      subTitle="It weighs less than 5kb"
    55→      code={
    88→const Features = () => (
    89→  <div className="my-12 grid gap-x-8 gap-y-5 grid-cols-2 md:grid-cols-3">
    90→    <Feature>Hot by default</Feature>
    91→    <Feature>Easy to use</Feature>
    92→    <Feature>Accessible</Feature>
    93→    <Feature>Emoji Support</Feature>
    94→    <Feature>Customizable</Feature>
    95→    <Feature>Promise API</Feature>
    96→    <Feature>Lightweight</Feature>
    97→    <Feature>Pause on hover</Feature>
    98→    <Feature>Headless Hooks</Feature>
    99→  </div>
   100→);
   102→export default function Home() {
site/postcss.config.js
site/tailwind.config.js
site/types/mdx.d.ts
site/types/svg.d.ts
     1→interface SvgrComponent
     5→  const value: SvgrComponent;
src/components/checkmark.tsx
     3→const circleAnimation = keyframes`
    13→const checkmarkAnimation = keyframes`
    29→export interface CheckmarkTheme {
    30→  primary?: string;
    31→  secondary?: string;
    32→}
    34→export const CheckmarkIcon = styled('div')<CheckmarkTheme>`
src/components/error.tsx
     3→const circleAnimation = keyframes`
    13→const firstLineAnimation = keyframes`
    23→const secondLineAnimation = keyframes`
    33→export interface ErrorTheme {
    34→  primary?: string;
    35→  secondary?: string;
    36→}
    38→export const ErrorIcon = styled('div')<ErrorTheme>`
src/components/loader.tsx
     3→const rotate = keyframes`
    12→export interface LoaderTheme {
    13→  primary?: string;
    14→  secondary?: string;
    15→}
    17→export const LoaderIcon = styled('div')<LoaderTheme>`
src/components/toast-bar.tsx
     8→const enterAnimation = (factor: number) => `
     9→0% {transform: translate3d(0,${factor * -200}%,0) scale(.6); opacity:.5;}
    10→100% {transform: translate3d(0,0,0) scale(1); opacity:1;}
    11→`;
    13→const exitAnimation = (factor: number) => `
    14→0% {transform: translate3d(0,0,-1px) scale(1); opacity:1;}
    15→100% {transform: translate3d(0,${factor * -150}%,-1px) scale(.6); opacity:0;}
    16→`;
    18→const fadeInAnimation = `0%{opacity:0;} 100%{opacity:1;}`;
    19→const fadeOutAnimation = `0%{opacity:1;} 100%{opacity:0;}`;
    22→const ToastBarBase = styled('div')`
    38→const Message = styled('div')`
    47→interface ToastBarProps {
    57→const getAnimationStyle = (
    58→  position: ToastPosition,
    59→  visible: boolean
    60→): React.CSSProperties => {
    75→export const ToastBar: React.FC<ToastBarProps> = React.memo(
src/components/toast-icon.tsx
     9→const StatusWrapper = styled('div')`
    13→const IndicatorWrapper = styled('div')`
    22→const enter = keyframes`
    32→export const AnimatedIconWrapper = styled('div')`
    41→export type IconThemes = Partial<{
    42→  success: CheckmarkTheme;
    43→  error: ErrorTheme;
    44→  loading: LoaderTheme;
    45→}>;
    47→export const ToastIcon: React.FC<{
src/components/toaster.tsx
    15→const ToastWrapper = ({
    47→const getPositionStyle = (
    48→  position: ToastPosition,
    49→  offset: number
    50→): React.CSSProperties => {
    76→const activeClass = css`
    83→const DEFAULT_OFFSET = 16;
    85→export const Toaster: React.FC<ToasterProps> = ({
src/core/store.ts
     4→export const TOAST_EXPIRE_DISMISS_DELAY = 1000;
     5→export const TOAST_LIMIT = 20;
     6→export const DEFAULT_TOASTER_ID = 'default';
     8→interface ToasterSettings {
    12→export enum ActionType {
    13→  ADD_TOAST,
    14→  UPDATE_TOAST,
    15→  UPSERT_TOAST,
    16→  DISMISS_TOAST,
    17→  REMOVE_TOAST,
    18→  START_PAUSE,
    19→  END_PAUSE,
    20→}
    22→export type Action =
    23→  | {
    24→      type: ActionType.ADD_TOAST;
    25→      toast: Toast;
    26→    }
    27→  | {
    28→      type: ActionType.UPSERT_TOAST;
    29→      toast: Toast;
    30→    }
    31→  | {
    32→      type: ActionType.UPDATE_TOAST;
    33→      toast: Partial<Toast>;
    34→    }
    35→  | {
    36→      type: ActionType.DISMISS_TOAST;
    37→      toastId?: string;
    38→    }
    39→  | {
    40→      type: ActionType.REMOVE_TOAST;
    41→      toastId?: string;
    42→    }
    43→  | {
    44→      type: ActionType.START_PAUSE;
    45→      time: number;
    46→    }
    47→  | {
    48→      type: ActionType.END_PAUSE;
    49→      time: number;
    50→    };
    52→interface ToasterState {
    58→interface State {
    62→export const reducer = (state: ToasterState, action: Action): ToasterState => {
   136→const listeners: Array<
   140→const defaultToasterState: ToasterState = {
   149→export const dispatch = (action: Action, toasterId = DEFAULT_TOASTER_ID) => {
   161→export const dispatchAll = (action: Action) =>
   162→  Object.keys(memoryState).forEach((toasterId) => dispatch(action, toasterId));
   164→export const getToasterIdFromToastId = (toastId: string) =>
   165→  Object.keys(memoryState).find((toasterId) =>
   166→    memoryState[toasterId].toasts.some((t) => t.id === toastId)
   167→  );
   169→export const createDispatch =
   170→  (toasterId = DEFAULT_TOASTER_ID) =>
   171→  (action: Action) => {
   175→export const defaultTimeouts: {
   185→export const useStore = (
   186→  toastOptions: DefaultToastOptions = {},
   187→  toasterId: string = DEFAULT_TOASTER_ID
   188→): ToasterState => {
src/core/toast.ts
    19→type Message = ValueOrFunction<Renderable, Toast>;
    21→type ToastHandler = (message: Message, options?: ToastOptions) => string;
    23→const createToast = (
    24→  message: Message,
    25→  type: ToastType = 'blank',
    26→  opts?: ToastOptions
    27→): Toast => ({
    42→const createHandler =
    43→  (type?: ToastType): ToastHandler =>
    44→  (message, options) => {
    55→const toast = (message: Message, opts?: ToastOptions) =>
    56→  createHandler('blank')(message, opts);
src/core/types.ts
     3→export type ToastType = 'success' | 'error' | 'loading' | 'blank' | 'custom';
     4→export type ToastPosition =
     5→  | 'top-left'
     6→  | 'top-center'
     7→  | 'top-right'
     8→  | 'bottom-left'
     9→  | 'bottom-center'
    10→  | 'bottom-right';
    12→export type Renderable = React.ReactElement | string | null;
    14→export interface IconTheme {
    15→  primary: string;
    16→  secondary: string;
    17→}
    19→export type ValueFunction<TValue, TArg> = (arg: TArg) => TValue;
    20→export type ValueOrFunction<TValue, TArg> =
    21→  | TValue
    22→  | ValueFunction<TValue, TArg>;
    24→const isFunction = <TValue, TArg>(
    25→  valOrFunction: ValueOrFunction<TValue, TArg>
    26→): valOrFunction is ValueFunction<TValue, TArg> =>
    27→  typeof valOrFunction === 'function';
    29→export const resolveValue = <TValue, TArg>(
    30→  valOrFunction: ValueOrFunction<TValue, TArg>,
    31→  arg: TArg
    32→): TValue => (isFunction(valOrFunction) ? valOrFunction(arg) : valOrFunction);
    34→export interface Toast {
    35→  type: ToastType;
    36→  id: string;
    37→  toasterId?: string;
    38→  message: ValueOrFunction<Renderable, Toast>;
    39→  icon?: Renderable;
    40→  duration?: number;
    41→  pauseDuration: number;
    42→  position?: ToastPosition;
    43→  removeDelay?: number;
    44→
    45→  ariaProps: {
    46→    role: 'status' | 'alert';
    47→    'aria-live': 'assertive' | 'off' | 'polite';
    48→  };
    49→
    50→  style?: CSSProperties;
    51→  className?: string;
    52→  iconTheme?: IconTheme;
    53→
    54→  createdAt: number;
    55→  visible: boolean;
    56→  dismissed: boolean;
    57→  height?: number;
    58→}
    60→export type ToastOptions = Partial<
    61→  Pick<
    62→    Toast,
    63→    | 'id'
    64→    | 'icon'
    65→    | 'duration'
    66→    | 'ariaProps'
    67→    | 'className'
    68→    | 'style'
    69→    | 'position'
    70→    | 'iconTheme'
    71→    | 'toasterId'
    72→    | 'removeDelay'
    73→  >
    74→>;
    76→export type DefaultToastOptions = ToastOptions & {
    77→  [key in ToastType]?: ToastOptions;
    78→};
    80→export interface ToasterProps {
    81→  position?: ToastPosition;
    82→  toastOptions?: DefaultToastOptions;
    83→  reverseOrder?: boolean;
    84→  gutter?: number;
    85→  containerStyle?: React.CSSProperties;
    86→  containerClassName?: string;
    87→  toasterId?: string;
    88→  children?: (toast: Toast) => React.ReactElement;
    89→}
    91→export interface ToastWrapperProps {
    92→  id: string;
    93→  className?: string;
    94→  style?: React.CSSProperties;
    95→  onHeightUpdate: (id: string, height: number) => void;
    96→  children?: React.ReactNode;
    97→}
src/core/use-toaster.ts
     6→export const REMOVE_DELAY = 1000;
     8→export const useToaster = (
     9→  toastOptions?: DefaultToastOptions,
    10→  toasterId: string = 'default'
    11→) => {
src/core/utils.ts
     1→export const genId = (() => {
     8→export const prefersReducedMotion = (() => {
src/headless/index.ts
src/index.ts
tsup.config.ts
     4→const commonConfig: Options = {
